fixed: line breaks in textareas on Firefox

--- a/src/app.css
+++ b/src/app.css
@@ -236,7 +236,6 @@ pre.verse {
     font-size: .8rem;
     line-height: 1rem;
     overflow-x: scroll;
-    white-space: nowrap;
 }
 
 .song-form-fields textarea {
